--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1"
   }
